# Grid-FTP

./: .gitignore  CMakeLists.txt  Makefile  README.md  rep.conf
client/: client.c  client.h
data_repository/: data_repository.c  data_repository.h
metadata_server/: dr_list.c  dr_list.h  server.c  server.h
utils/: colors.h  common.c  common.h  dr_list.c  dr_list.h  error_helper.h  file_db.c  file_db.h  protocol.c  protocol.h
